--- a/03_01.html
+++ b/03_01.html
@@ -1,19 +1,23 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>03-01</title>
-</head>
+    <head>
+        <meta charset="UTF-8">
+        <meta http-equiv="X-UA-Compatible" content="IE=edge">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <title>03-01</title>
+    </head>
+
+    <body>
+        <p id='statePar'>here should be app state</p>    
+    </body>
+</html>
+
 <script>
     var statePar = document.getElementById('statePar')
     var getCurrentAppStateUrl = 'http//localhost:5000/get_current_app_state'
-    var response = fetch(getCurrentAppStateUrl).then(response => {
-        statePar.innerHTML = response.text()
+    var response = fetch(getCurrentAppStateUrl).then(response => response.text())
+    .then(text => {
+        statePar.innerHTML = text
+        console.log(text)
     })
 </script>
-<body>
-    <p id='statePar'>par</p>
-</body>
-</html>
